--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banco O.K.J Dominicano | Tu confianza, nuestro compromiso.</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="image-placeholder hero-image">
-                <img src="images/familia_feliz.jpg" alt="Familia feliz con los servicios del Banco O.K.J" class="responsive-img">
+                <img src="familia_feliz.jpg" alt="Familia feliz con los servicios del Banco O.K.J" class="responsive-img">
             </div>
         </section>
     </main>
@@ -58,6 +58,7 @@
         <p>&copy; 2025 Banco O.K.J Dominicano. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
