--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos y Servicios | Banco O.K.J Dominicano</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -61,7 +61,7 @@
             </section>
             
             <div class="customer-service-image">
-                <img src="images/atencion_clientes.jpg" alt="Asesores bancarios dando atención personalizada" class="responsive-img">
+                <img src="atencion_clientes.jpg" alt="Asesores bancarios dando atención personalizada" class="responsive-img">
             </div>
 
             <div class="call-to-action">
@@ -82,4 +82,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
