--- a/products.html
+++ b/products.html
@@ -80,7 +80,8 @@
         <p>&copy; 2025 Banco O.K.J Dominicano. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
+
