--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sucursales y Contacto | Banco O.K.J Dominicano</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -41,20 +41,20 @@
                 <div class="sucursal-item">
                     <h4>Sucursal Santo Domingo Norte (Sabaneta)</h4>
                     <p>Avenida Los Restauradores casi esquina **compraventa Villar**, Sabana Perdida, Santo Domingo Norte.</p>
-                    <img src="images/mapa_villar.jpg" alt="Foto de referencia de la sucursal de Sabana Perdida" class="sucursal-img">
+                    <img src="mapa_villar.jpg" alt="Foto de referencia de la sucursal de Sabana Perdida" class="sucursal-img">
                 </div>
                 
                 <div class="sucursal-item">
                     <h4>Sucursal Charles de Gaulle</h4>
                     <p>Avenida Charles de Gaulle, al lado del **residencial Don Oscar**.</p>
-                    <img src="images/mapa_charles.jpg" alt="Foto de referencia de la sucursal Charles de Gaulle" class="sucursal-img">
+                    <img src="mapa_charles.jpg" alt="Foto de referencia de la sucursal Charles de Gaulle" class="sucursal-img">
                 </div>
             </div>
 
             <div class="map-container">
                 <h3>Ubícanos</h3>
                 <div class="map-placeholder">
-                    <img src="images/mapa_general.jpg" alt="Mapa general de la zona de ubicación" class="responsive-img">
+                    <img src="mapa_general.jpg" alt="Mapa general de la zona de ubicación" class="responsive-img">
                 </div>
                 <p class="map-note">Para una navegación precisa, use nuestra aplicación móvil o consulte el mapa completo en línea.</p>
             </div>
@@ -91,6 +91,7 @@
         <p>&copy; 2025 Banco O.K.J Dominicano. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
