--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nosotros | Banco O.K.J Dominicano</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -57,7 +57,7 @@
                 <h3>👔 Equipo Directivo</h3>
                 <p>Liderado por un grupo de profesionales con amplia experiencia en el sector financiero, dedicados a ofrecer el mejor servicio.</p>
                 <div class="team-photo">
-                    <img src="images/equipo_directivo.jpg" alt="Foto del equipo directivo del Banco O.K.J" class="responsive-img">
+                    <img src="equipo_directivo.jpg" alt="Foto del equipo directivo del Banco O.K.J" class="responsive-img">
                 </div>
             </section>
         </div>
@@ -73,6 +73,7 @@
         <p>&copy; 2025 Banco O.K.J Dominicano. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
